2006-11-10  Li Guanglei <guanglei@cn.ibm.com>

	* transport/procfs.c: bugfix of the obsolete buf_info
	and consumed_info.
	
2006-11-09  Martin Hunt  <hunt@redhat.com>

	* sym.h: Change int to int32_t.

2006-11-09  Li Guanglei <guanglei@cn.ibm.com>

	* runtime/lket/b2a/lket_b2a.[ch]: add options to control
	the output data fields of lket.out

2006-11-02  Martin Hunt  <hunt@redhat.com>

	* sym.c (_stp_module_relocate): New function. Needed by the 
	translator to relocate module symbols.
	(_stp_kallsyms_lookup_name): Rewrite to use new symbol structs.
	(_stp_kallsyms_lookup): Ditto.	
	
	* sym.h: Declare the structures and arrays that contain all
	the symbol and module information.

	* io.c (_stp_vlog, _stp_dbug):  Make first parameter const.
	* runtime.h: Update prototype for _stp_dbug.

2006-10-27  Thang Nguyen <thang.p.nguyen@intel.com>

	* runtime/regs.c: patch from Bibo Mao for fixing the return
	value on IA64 (bz #3404).

2006-10-24  Li Guanglei <guanglei@cn.ibm.com>

	* runtime/lket/b2a/lket_b2a.[ch]: be sync with LKET hookid
	rearrangement.

2006-10-23  Li Guanglei <guanglei@cn.ibm.com>
	* runtime/lket/b2a/lket_b2a.c: bugfix of event description
	data insert.

2006-10-12  Martin Hunt  <hunt@redhat.com>

	* stack-ppc64.c (__stp_stack_sprint): Declare sp before _sp.

2006-10-12  Martin Hunt  <hunt@redhat.com>
	
	* stack.c: Reorganize and split arch-specific functions to
	separate files.
	(_stp_kta): Better checking.
	(_stp_stack_sprint): Better handling of return probes. 

	* stack-i386.c: New file. Uses 2.6.18 DWARF unwinder if available.
	* stack-x86_64.c: New file. Uses 2.6.18 DWARF unwinder if available.
	* stack-ppc64.c: New file.
	* stack-ia64.c: New file.

	* sym.c (_stp_kallsyms_lookup_name): New function. Like
	kallsyms_lookup_name() except use our internal lookup table.

2006-10-10  Frank Ch. Eigler  <fche@elastic.org>

	* runtime/lket/b2a/lket_b2a.c: Add several missing #ifdef HAS_MYSQL.

2006-10-10  Li Guanglei <guanglei@cn.ibm.com>
